# dory

./: .gitignore  .gitmodules  README.md  float_pcb.kicad_pcb  float_pcb.kicad_pro  float_pcb.kicad_sch  fp-lib-table  sym-lib-table
_restore_backup_2026-06-02T01-17-38-155/: float_pcb.kicad_pcb  float_pcb.kicad_pro  float_pcb.kicad_sch  ~float_pcb.kicad_sch.lck
_restore_backup_2026-06-02T11-38-32-882/: float_pcb.kicad_pcb  float_pcb.kicad_sch
_restore_backup_2026-06-02T11-38-32-882/jlcpcb/: project.db
firmware/: AGENTS.md  CMakeLists.txt  sdkconfig  sdkconfig.old
firmware/dory/: AGENTS.md
firmware/dory/main/: CMakeLists.txt  Kconfig.projbuild  board_pins.h  com.c  com.h  debug_serial.c  debug_serial.h  main.c
firmware/dory/main/board/: battery.c  battery.h  buck.c  buck.h  buzzer.c  buzzer.h  light.c  light.h  servo.c
firmware/main/: CMakeLists.txt  board_pins.h  com.c  com.h  debug_serial.c
firmware/main/board/: battery.c  buzzer.c  buzzer.h  light.c  light.h  servo.c  servo.h
jlcpcb/: project.db
jlcpcb/gerber/: float_pcb-CuBottom.gbr  float_pcb-CuIn1.gbr  float_pcb-CuIn2.gbr  float_pcb-CuTop.gbr  float_pcb-EdgeCuts.gbr  float_pcb-MaskBottom.gbr  float_pcb-MaskTop.gbr  float_pcb-NPTH.drl  float_pcb-PTH.drl  float_pcb-PasteBottom.gbr  float_pcb-PasteTop.gbr  float_pcb-SilkBottom.gbr  float_pcb-SilkTop.gbr
jlcpcb/production_files/: BOM-float_pcb.csv  CPL-float_pcb.csv
