idf_component_register(SRCS "main.c"
                            "com.c"
                            "debug_serial.c"
                            "board/battery.c"
                            "board/servo.c"
                            "board/buzzer.c"
                            "board/light.c"
                    INCLUDE_DIRS ".")
